# HardstucksDebatingWebsite

./: .gitmodules
backend/: .env.example  pyproject.toml
backend/app/: main.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: DebateResults.tsx  DebateUploader.tsx  DownloadCSVButton.tsx  FormatExample.tsx  FormatExamples.tsx
frontend/src/hooks/: useDarkMode.ts
frontend/src/utils/: csvParser.ts  excelParser.ts
frontend/src/utils/parsers/: csvParser.ts  excelParser.ts  parser.ts
